# tron_roll_call_hero

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  auto-rollcall-thu-tronclass.spec  config.example.yaml  docker-compose.yml  pyproject.toml  requirements.txt  tron-roll-call-hero.spec
.github/workflows/: ci.yml
deploy/: tron-bot.service
docs/: bot-setup.md  deploy.md  multi-account-todo.md  release-notes.md
docs/architecture/: 0001-multi-account-runtime.md  multi-account-framework.md
tests/: fake_tron_server.py  test_account_context.py  test_account_models.py  test_account_registry.py  test_account_runtime_store.py  test_account_state_repository.py  test_account_supervisor.py  test_account_worker.py  test_adapter_server.py  test_app_blueprint.py  test_app_qr_experience.py  test_app_shell.py  test_app_shell_dashboard.py  test_app_shell_polish.py  test_application_runtime.py  test_attendance_gate.py  test_auth_account.py  test_bot_handlers.py  test_bot_runtime.py  test_bot_status.py  test_bot_supervisor_bridge.py  test_captcha_solver.py  test_cli.py  test_clipboard_qr.py  test_config_editor.py  test_config_reload.py  test_config_view.py  test_course_discovery.py  test_dashboard_events.py  test_dashboard_server.py  test_debug_capture.py  test_deploy_artifacts.py  test_discord_adapter.py  test_discord_gateway.py  test_fake_tron_server.py  test_global_radar_solver.py  test_group_runtime.py  test_input_safety.py  test_line_adapter.py  test_multi_account_server.py  (+41 more)
troTHU/: account_context.py  account_models.py  account_registry.py  account_runtime_store.py  account_state_repository.py  account_store.py  account_supervisor.py  account_worker.py  app_shell.py  app_shell_polish.py  application_runtime.py  auth_account.py  auth_runtime.py  bot_handlers.py  bot_runtime.py  bot_supervisor_bridge.py  cli_accounts.py  cli_bot.py  cli_parser.py  cli_system.py  clipboard_qr.py  config_editor.py  config_runtime.py  config_view.py  debug_capture.py  discord_adapter.py  group_runtime.py  input_safety.py  local_scanner.py  logging_runtime.py  monitor_runtime.py  notification_bus.py  notification_delivery.py  number_account.py  number_rollcall.py  number_runtime.py  package_diagnostics.py  pending_qr.py  qr_account.py  qr_fanout.py  (+24 more)
tron_roll_call_hero/: account_context.py  account_models.py  account_registry.py  account_state_repository.py  account_store.py  account_supervisor.py  account_worker.py  adapter_bridge.py  adapter_server.py  app_shell.py  app_shell_dashboard.py  app_shell_polish.py  application_runtime.py  attendance_gate.py  auth_account.py  auth_runtime.py  bot_handlers.py  bot_runtime.py  bot_supervisor_bridge.py  captcha_solver.py  cli_accounts.py  cli_app.py  cli_bot.py  cli_courses.py  cli_main.py  cli_parser.py  cli_provider.py  cli_qr.py  cli_research.py  cli_system.py  cli_teacher.py  clipboard_qr.py  config_editor.py  config_runtime.py  config_view.py  connection_probe.py  course_discovery.py  dashboard_events.py  dashboard_server.py  discord_adapter.py  (+44 more)
